[package]
name = "jupiter-cpi"
version = "4.0.3"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.26.0"
solana-sdk = "1.14.17"
solana-account-decoder = "1.14.17"

jupiter-amm-interface = "0.2.0"
rand = "0.8.5"
